--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -72,6 +72,7 @@
     "react/no-unescaped-entities": 0,
     "jsx-a11y/accessible-emoji": 0,
     "react/require-default-props": 0,
+    "react/self-closing-comp": 0,
     // 임시 off
     "react/prop-types": 0,
     "no-plusplus": 0,
