--- a/.eslintrc
+++ b/.eslintrc
@@ -83,7 +83,7 @@
     "arrow-body-style": 0,
     "no-param-reassign": 0,
     "import/prefer-default-export": 0,
-
+    "import/no-unresolved": "off",
     "react/jsx-filename-extension": [
       1,
       {
