Feat: #40 검색 드랍다운 구현
- 드랍다운 메뉴 상수화
- css를 이용한 드랍다운 구현

--- a/.eslintrc
+++ b/.eslintrc
@@ -75,6 +75,7 @@
     "react/require-default-props": 0,
     "react/self-closing-comp": 0,
     // 임시 off
+    "dot-notation": 0,
     "import/named": 0,
     "react/prop-types": 0,
     "no-plusplus": 0,
