Feat: EsLint change & history 객체 활용 및 localstorage 저장 기능 구현

--- a/.eslintrc
+++ b/.eslintrc
@@ -40,7 +40,7 @@
         "destructuring": "all"
       }
     ],
-
+    "no-use-before-define": ["error", { "variables": false, "functions": false, "classes": false }],
     // "arrow-body-style": [1, "as-needed"],
     "no-unused-expressions": [
       2,
